@startuml
' Settings
' ============================

' use +,#,- instead of icons
'skinparam classAttributeIconSize 0

' horizontal distance in px
skinparam nodesep 60 

' vertical distance in px
skinparam ranksep 50

' use only straight lines (ortho/polyline)
'skinparam linetype polyline

' title
title 3-1-2 Strategy Refactoring



' Abstract Classes
' ============================
class PacketHandler{
    +packet: packet
    +policy: PacketStrategy

    +setpolicy(policy: PacketStrategy)
    +process()
}

interface PacketStrategy{
    +process(p: packet)
}

' Concrete Classes
' ============================
class packet{
    +data: Any
}

class SSHHandler{
    +process(p: packet)
}

class TLSHandler{
    +process(p: packet)
}

class IPsecHandler{
    +process(p: packet)
}


' Relations
' ================================
PacketHandler "1" *-r-> "1" PacketStrategy
PacketHandler "1" -l-> "1" packet

SSHHandler -u-|> PacketStrategy
TLSHandler -u-|> PacketStrategy
IPsecHandler -u-|> PacketStrategy
@enduml